# ironhub

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  railway.json  tracking.md
.github/ISSUE_TEMPLATE/: new-skill.yml  new-tool.yml  suggest-new-feature.yml  usecase.yml
.github/workflows/: ci.yml
skills/: README.md
skills/chief-of-staff/: README.md  SKILL.md
skills/daily-briefing-automation/: SKILL.md
skills/meeting-notes-parser-enhanced/: SKILL.md
skills/pr-triage-digest/: README.md  SKILL.md
tools/: README.md
tools/clickup/: Cargo.toml  README.md  clickup-tool.capabilities.json
tools/clickup/src/: api.rs  clickup.rs  lib.rs  types.rs
tools/evm-rpc/: Cargo.toml  evm-rpc-tool.capabilities.json
tools/evm-rpc/src/: api.rs  lib.rs  rpc.rs  types.rs
tools/gitlab/: Cargo.toml  README.md  gitlab-tool.capabilities.json
tools/gitlab/src/: api.rs  gitlab.rs  lib.rs  types.rs
tools/hubspot/: Cargo.toml  hubspot-tool.capabilities.json
tools/hubspot/src/: api.rs  hubspot.rs  lib.rs  types.rs
tools/monday/: Cargo.toml  monday-tool.capabilities.json
tools/monday/src/: api.rs  lib.rs  monday.rs  types.rs
tools/nova-submit/: README.md  manifest.toml
tools/polymarket-clob/: Cargo.toml  polymarket-clob-tool.capabilities.json
tools/polymarket-clob/src/: http.rs  lib.rs  types.rs
tools/wazuh/: Cargo.toml  wazuh-tool.capabilities.json
tools/wazuh/src/: api.rs  lib.rs  types.rs  wazuh.rs
tools/whatsapp/: Cargo.toml  README.md  whatsapp-tool.capabilities.json
tools/whatsapp/src/: api.rs  lib.rs  types.rs  whatsapp.rs
use-cases/a-daily-digest-of-rss-hacker-news-and-reddit-noise-filtered-by-your-niche-and-delivered-to-slack/: USE_CASE.md
use-cases/a-meta-agent-that-watches-what-you-ask-finds-repeated-patterns-and-proposes-or-auto-builds-new-a/: USE_CASE.md
use-cases/a-proactive-family-agent-smart-recurring-reminders-a-per-person-weekly-meal-planner-with-auto-sh/: USE_CASE.md
use-cases/a-read-only-telegram-user-bot-mtproto-for-community-managers-watch-keywords-across-groups-get-da/: USE_CASE.md
use-cases/a-read-only-telegram-user-bot-mtproto-that-gives-founders-vcs-a-5-minute-daily-dm-recap-grouped/: USE_CASE.md
use-cases/accountability-partner-daily-goal-tracker-that-alerts-when-you-re-stuck-or-late/: USE_CASE.md
use-cases/add-watermark-to-media/: USE_CASE.md
use-cases/aggregate-commitments-from-gmail-calendar-slack-telegram-task-apps-and-github-then-build-a-time/: USE_CASE.md
use-cases/ai-parses-receipts-from-gmail-photo-uploads-or-manual-entry-and-logs-every-expense-into-google-s/: USE_CASE.md
use-cases/alert-me-before-stablecoins-depeg/: USE_CASE.md
use-cases/binance-technical-analysis-analyst-with-on-demand-calls-and-watchlist-alerts/: USE_CASE.md
use-cases/bug-bounty-triager-new-reports-auto-reproduced-scored-against-your-attack-surface-and-queued-by/: USE_CASE.md
use-cases/build-onboarding-packs-for-new-hires/: USE_CASE.md
use-cases/changelog-to-release-comms-pipeline-repo-tags-a-release-agent-drafts-release-notes-customer-emai/: USE_CASE.md
use-cases/convert-svg-vector-files-to-png/: USE_CASE.md
use-cases/create-a-personal-emergency-folder/: USE_CASE.md
use-cases/create-event-marketing-image/: USE_CASE.md
use-cases/crypto-hypothesis-tester-automatically-validate-your-market-theories-over-time/: USE_CASE.md
use-cases/daily-inbox-summarizer-with-reply-drafts-and-to-dos-delivered-where-you-work/: USE_CASE.md
use-cases/daily-morning-digest-that-pulls-from-github-telegram-and-slack-and-sends-one-ai-summary-to-the-c/: USE_CASE.md
use-cases/daily-or-weekly-ai-email-digest-pushed-to-slack-or-email-stay-on-top-of-your-inbox-without-readi/: USE_CASE.md
use-cases/daily-positive-news-insight-briefer-for-a-better-mood-workday/: USE_CASE.md
use-cases/deep-codebase-explorer-that-explains-why-code-works-with-on-demand-doc-export/: USE_CASE.md
use-cases/defi-portfolio-monitor-daily-risk-assessment-and-yield-opportunities-via-defillama/: USE_CASE.md
use-cases/extract-subtitles-from-youtube-videos/: USE_CASE.md
use-cases/fetch-github-trending-every-day-filter-it-by-your-interests-and-language-and-get-a-tight-digest/: USE_CASE.md
use-cases/follow-source-telegram-channels-rewrite-each-post-in-your-target-language-and-voice-batch-them-i/: USE_CASE.md
use-cases/github-issues-prs-review-requests-from-any-repo-instant-notification-in-slack-or-telegram-option/: USE_CASE.md
use-cases/grant-funding-deadline-tracker-monitor-grant-databases-match-eligibility-alert-on-deadlines/: USE_CASE.md
use-cases/index-every-text-message-in-your-telegram-saved-messages-then-ask-the-agent-to-find-summarise-or/: USE_CASE.md
use-cases/monitor-any-rss-feed-turn-new-posts-into-platform-tailored-social-drafts-in-a-notion-content-que/: USE_CASE.md
use-cases/monitor-google-business-reviews-classify-positive-vs-negative-with-theme-grouping-alert-on-bad-r/: USE_CASE.md
use-cases/monitor-x-reddit-youtube-hacker-news-news-and-telegram-for-any-mention-of-your-brand-competitors/: USE_CASE.md
use-cases/mood-aware-movie-and-anime-recommender-with-why-this-fits-explanations/: USE_CASE.md
use-cases/new-form-submission-ai-qualified-lead-in-crm-instant-team-notification-in-telegram-slack-discord/: USE_CASE.md
use-cases/offline-meeting-prep-dossier-on-any-person-or-company-on-demand/: USE_CASE.md
use-cases/read-gmail-for-invoices-and-receipts-parse-them-with-ai-and-send-a-weekly-or-monthly-spending-re/: USE_CASE.md
web/: .env.example  .gitignore  README.md  components.json  docker-compose.yml  package.json
(+276 files in other folders)
