[package]
name = "clickup-tool"
version = "0.1.0"
edition = "2021"
description = "ClickUp integration for the IronClaw agent runtime. Wraps the ClickUp v2 REST API across workspaces, spaces, folders, lists, tasks, task comments, and members."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nearai/ironhub"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
