[package]
name = "evm-rpc-tool"
version = "0.1.0"
edition = "2021"
description = "EVM JSON-RPC integration. Read account balances, contract code and storage, call view functions, fetch blocks, transactions, receipts, and logs across Ethereum mainnet, Polygon, Arbitrum, Optimism, Base, BNB Chain, Avalanche, and any custom EVM RPC endpoint."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nearai/ironhub"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
schemars = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
