[package]
name = "gitlab-tool"
version = "0.1.0"
edition = "2021"
description = "GitLab integration for the IronClaw agent runtime. Wraps the GitLab v4 REST API across projects, issues, merge requests, branches, files, search, pipelines, and the current user."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nearai/ironhub"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
