[package]
name = "hubspot-tool"
version = "0.1.0"
edition = "2021"
description = "HubSpot CRM v3 read access for the IronClaw agent runtime. Lists and searches contacts, companies, deals, and tickets, and fetches a single object by id, authenticated with a HubSpot Private App token against api.hubapi.com."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nearai/ironhub"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
