[package]
name = "monday-tool"
version = "0.1.0"
edition = "2021"
description = "monday.com API v2 (GraphQL) integration for the IronClaw agent runtime. Reads boards, items, users, and the current account, and posts updates to items. Authenticated with a personal API token presented as a raw Authorization header (no Bearer prefix)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nearai/ironhub"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
