[package]
name = "wazuh-tool"
version = "0.1.0"
edition = "2021"
description = "Wazuh integration for the IronClaw agent runtime. Reads security alerts and vulnerability findings from the Wazuh Indexer (OpenSearch) over HTTP Basic auth, and lists agents from the Wazuh Server API via a per-call Basic-to-JWT token exchange."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nearai/ironhub"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
